# game-stream-scream-proxy

./: .gitignore  .gitmodules  BasicRtpGenerator.cpp  BasicRtpGenerator.h  CMakeLists.txt  MsgTypeConverter.cpp  MsgTypeConverter.h  README.md  ScreamClient.cpp  ScreamClient.h  ScreamClientSingle.cpp  ScreamClientSingle.h  ScreamServer.cpp  ScreamServer.h  ScreamServerSingle.cpp  ScreamServerSingle.h  SimpleBlock.cpp  SimpleBlock.h  Sink.h  Source.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  UdpSocket.cpp  UdpSocket.h  basic_rtp_generator.cpp  basic_rtp_generator.h  logger.cpp  logger.h  main_client.cpp  main_server.cpp  msg_type_converter.cpp  msg_type_converter.h  scream_client_single.cpp  scream_client_single.h  scream_server_single.cpp  scream_server_single.h  scream_utils.cpp  scream_utils.h  (+13 more)
